--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoManager.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoManager.mustache
@@ -1,2 +1,7 @@
-<div>
+<div class="video-manager-wrapper">
+    <div class="video-list">
+    </div>
+    <div class="controls">
+        <i class="icon icon-plus-circled" aria-hidden="true" title="Записать"></i>
+    </div>
 </div>
