--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45805543');
-  src: url('../font/fontello.eot?45805543#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45805543') format('woff2'),
-       url('../font/fontello.woff?45805543') format('woff'),
-       url('../font/fontello.ttf?45805543') format('truetype'),
-       url('../font/fontello.svg?45805543#fontello') format('svg');
+  src: url('../font/fontello.eot?46651934');
+  src: url('../font/fontello.eot?46651934#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?46651934') format('woff2'),
+       url('../font/fontello.woff?46651934') format('woff'),
+       url('../font/fontello.ttf?46651934') format('truetype'),
+       url('../font/fontello.svg?46651934#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?45805543#fontello') format('svg');
+    src: url('../font/fontello.svg?46651934#fontello') format('svg');
   }
 }
 */
@@ -55,5 +55,12 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-plus-circled:before { content: '\2795'; } /* '➕' */
 .icon-volume-off:before { content: '\e00c'; } /* '' */
 .icon-volume-down:before { content: '\e00d'; } /* '' */
+.icon-video:before { content: '\e012'; } /* '' */
+.icon-cancel-circled2:before { content: '\e04d'; } /* '' */
+.icon-arrows-cw:before { content: '\e04f'; } /* '' */
+.icon-download-alt:before { content: '\e0c3'; } /* '' */
+.icon-video-alt:before { content: '\e0e9'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
