#531 openlayers controls was hidden

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/recording_video/Display/Display.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/recording_video/Display/Display.css
@@ -5,3 +5,11 @@ body.claro div.main-wrapper div.body-wrapper {
     left: 0;
     bottom: 0;
 }
+
+div.olControlZoom,
+div.olControlScaleLine,
+#permalink,
+#LayersLoadingIndicator,
+div.olControlAttribution {
+    display: none;
+}
