--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
@@ -3,24 +3,23 @@
 }
 
 #videoManager div.video-list {
-    height: 110px;
+    height: 120px;
     width: 334px;
     border: 1px solid #bfbfbf;
     margin-top: 1px;
 }
 
 #videoManager div.controls {
-    border: 1px solid #bfbfbf;
     width: 98%;
     height: 25px;
-    text-align: center;
+    text-align: left;
 }
 
 #videoManager div.controls i.icon {
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     color: #599BFF;
-    margin: 2px 2px 0 0;
+    margin: 5px 2px 0 0;
     cursor: pointer;
     opacity: 0.7;
 }
