--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoItems.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoItems.mustache
@@ -1,14 +1,14 @@
-<ul>
-    {{#videoItems}}
+<ul class="video-items">
+    {{#videoInfoItems}}
         <li data-id="{{id}}">
-            <span class="caption">{{name}} [{{size}}]</span>
+            <span class="caption">{{name}} {{#size}}[{{size}}]{{/size}}</span>
             {{#status_creating}}
-                <i class="icon icon-spin6" href="{{src}}"></i>
+                <i class="icon icon-spin6" href="{{src}}" title="Создается"></i>
             {{/status_creating}}
             {{#status_ready}}
-                <i class="icon icon-download-alt" href="{{src}}"></i>
-                <i class="icon icon-cancel-circled2" href="javascript:void(0)"></i>
+                <i class="icon icon-cancel-circled2" href="javascript:void(0)" title="Удалить"></i>
+                <i class="icon icon-download-alt" href="{{src}}" title="Скачать"></i>
             {{/status_ready}}
         </li>
-    {{/videoItems}}
+    {{/videoInfoItems}}
 </ul>
