--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.mustache
@@ -3,7 +3,7 @@
 
     </div>
     <div class="controls">
-        <i class="icon icon-plus-circled" aria-hidden="true" title="Записать видео"></i>
-        <i class="icon icon-arrows-cw" aria-hidden="true" title="Обновить"></i>
+        <a class="icon icon-plus-circled" aria-hidden="true" title="Записать видео"></a>
+        <a class="icon icon-arrows-cw" aria-hidden="true" title="Обновить"></a>
     </div>
 </div>
