--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/PhotoPointer.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/PhotoPointer.mustache
@@ -1,3 +1,6 @@
-<div class="image-wrapper" style="width: {{width}}px; height: {{height}}px;">
+<div class="image-wrapper left-bottom" style="width: {{width}}px; height: {{height}}px;">
+
+</div>
+<div class="image-wrapper right-top" style="width: {{width}}px; height: {{height}}px;">
 
 </div>
