#537 switcher of video manager was implemented

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -64,7 +64,8 @@ div#timeline div.vis-current-time {
 }
 
 div.timeline i.sound,
-div.timeline i.photo {
+div.timeline i.photo,
+div.timeline i.video {
     margin-left: 15px;
 }
 
