--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -7,6 +7,7 @@
         <i class="fa fa-fast-forward fa-2x" aria-hidden="true" title="В конец"></i>
         <i class="icon icon-volume-down sound" aria-hidden="true" title="Звук"></i>
         <i class="fa fa-eye fa-2x photo" aria-hidden="true" title="Фото"></i>
+        <i class="icon icon-video video" aria-hidden="true" title="Видео"></i>
     </div>
     <br/>
     <div class="controls">
