#544 bottom-right container was added

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
@@ -32,6 +32,11 @@ div.olControlPhotoPointer div.image-wrapper.right-top {
     right: 4px;
 }
 
+div.olControlPhotoPointer div.image-wrapper.right-bottom {
+    bottom: 5px;
+    right: 11px;
+}
+
 div.olControlPhotoPointer img {
     position: absolute;
     left: 0;
