--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.mustache
@@ -1,6 +1,6 @@
 <div class="image-wrapper left-bottom" style="width: {{width}}px; height: {{height}}px;">
-
 </div>
 <div class="image-wrapper right-top" style="width: {{width}}px; height: {{height}}px;">
-
+</div>
+<div class="image-wrapper right-bottom" style="width: {{width}}px; height: {{height}}px;">
 </div>
