--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
@@ -66,3 +66,7 @@
 #videoManager div.video-list ul.video-items li a.icon:hover {
     opacity: 1;
 }
+
+#videoManager div.video-list ul.video-items li a.icon.red {
+    color: red;
+}
