--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello-ie7.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello-ie7.css
@@ -10,6 +10,7 @@
   /* font-size: 120%; */
 }
  
+.icon-attention { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x26a0;&nbsp;'); }
 .icon-plus-circled { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x2795;&nbsp;'); }
 .icon-volume-off { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe00c;&nbsp;'); }
 .icon-volume-down { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe00d;&nbsp;'); }
