--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?46651934');
-  src: url('../font/fontello.eot?46651934#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?46651934') format('woff2'),
-       url('../font/fontello.woff?46651934') format('woff'),
-       url('../font/fontello.ttf?46651934') format('truetype'),
-       url('../font/fontello.svg?46651934#fontello') format('svg');
+  src: url('../font/fontello.eot?63959723');
+  src: url('../font/fontello.eot?63959723#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?63959723') format('woff2'),
+       url('../font/fontello.woff?63959723') format('woff'),
+       url('../font/fontello.ttf?63959723') format('truetype'),
+       url('../font/fontello.svg?63959723#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?46651934#fontello') format('svg');
+    src: url('../font/fontello.svg?63959723#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-attention:before { content: '\26a0'; } /* '⚠' */
 .icon-plus-circled:before { content: '\2795'; } /* '➕' */
 .icon-volume-off:before { content: '\e00c'; } /* '' */
 .icon-volume-down:before { content: '\e00d'; } /* '' */
