--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/css/fontello.css
@@ -1,11 +1,13 @@
-@font-face {
+@charset "UTF-8";
+
+ @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?63959723');
-  src: url('../font/fontello.eot?63959723#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?63959723') format('woff2'),
-       url('../font/fontello.woff?63959723') format('woff'),
-       url('../font/fontello.ttf?63959723') format('truetype'),
-       url('../font/fontello.svg?63959723#fontello') format('svg');
+  src: url('../font/fontello.eot?74184337');
+  src: url('../font/fontello.eot?74184337#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?74184337') format('woff2'),
+       url('../font/fontello.woff?74184337') format('woff'),
+       url('../font/fontello.ttf?74184337') format('truetype'),
+       url('../font/fontello.svg?74184337#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?63959723#fontello') format('svg');
+    src: url('../font/fontello.svg?74184337#fontello') format('svg');
   }
 }
 */
@@ -64,4 +66,7 @@
 .icon-arrows-cw:before { content: '\e04f'; } /* '' */
 .icon-download-alt:before { content: '\e0c3'; } /* '' */
 .icon-video-alt:before { content: '\e0e9'; } /* '' */
+.icon-videocam-1:before { content: '\e115'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
+.icon-videocam-2:before { content: '\f03a'; } /* '' */
+.icon-videocam:before { content: '🎥'; } /* '\1f3a5' */
