#572 record button icon was set red color

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
@@ -67,6 +67,8 @@
     opacity: 1;
 }
 
-#videoManager div.video-list ul.video-items li a.icon.red {
+#videoManager div.controls a.icon-videocam-2,
+#videoManager div.video-list ul.video-items li a.icon.red,
+#videoManager div.video-list ul.video-items span.caption.red {
     color: red;
 }
