--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
@@ -1,7 +1,5 @@
 div.olMapViewport div.olControlPhotoPointer {
     display: none;
-    width: 100%;
-    height: 100%;
 }
 
 div.olMapViewport.olControlPhotoPointerActive div.olControlPhotoPointer {
@@ -11,34 +9,33 @@ div.olMapViewport.olControlPhotoPointerActive div.olControlPhotoPointer {
 div.olControlPhotoPointer {
     position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    width: 0;
+    height: 0;
     border: none;
     background-color: transparent;
 }
 
-div.olControlPhotoPointer div.image-wrapper {
+div.olMapViewport div.image-wrapper {
     position: absolute;
     overflow: hidden;
 }
 
-div.olControlPhotoPointer div.image-wrapper.left-bottom {
+div.olMapViewport div.image-wrapper.left-bottom {
     bottom: 5px;
     left: 11px;
 }
 
-div.olControlPhotoPointer div.image-wrapper.right-top {
+div.olMapViewport div.image-wrapper.right-top {
     top: 44px;
     right: 4px;
 }
 
-div.olControlPhotoPointer div.image-wrapper.right-bottom {
+div.olMapViewport div.image-wrapper.right-bottom {
     bottom: 5px;
     right: 11px;
 }
 
-div.olControlPhotoPointer img {
+div.olMapViewport div.image-wrapper img {
     position: absolute;
     left: 0;
     right: 0;
@@ -58,7 +55,7 @@ div.olControlPhotoPointer img {
     transition: transform 8s ease-out;
 }
 
-div.olControlPhotoPointer img.scale-animated {
+div.olMapViewport div.image-wrapper img.scale-animated {
     -moz-transform: scale(2);
     -ms-transform: scale(2);
     -webkit-transform: scale(2);
