--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
@@ -50,15 +50,43 @@ div.olMapViewport div.image-wrapper img {
     -webkit-transform: scale(1);
     -o-transform: scale(1); 
     transform: scale(1);
-    -webkit-transition: -webkit-transform 8s ease-out;
-    -moz-transition: -moz-transform 8s ease-out;
-    transition: transform 8s ease-out;
+    -webkit-transition: -webkit-transform 8s ease-out, opacity 1s linear, visibility 0s 1s;
+    -moz-transition: -moz-transform 8s ease-out, opacity 1s linear, visibility 0s 1s;
+    transition: transform 8s ease-out, opacity 1s linear, visibility 0s 1s;
+    opacity: 0;
 }
 
 div.olMapViewport div.image-wrapper img.scale-animated {
+    display: block;
     -moz-transform: scale(2);
     -ms-transform: scale(2);
     -webkit-transform: scale(2);
     -o-transform: scale(2); 
     transform: scale(2);
+    opacity: 1;
+}
+
+div.olMapViewport div.image-wrapper img.opacity-hidden-animated {
+    visibility: hidden;
+    opacity: 0;
+}
+
+div.olLayerDiv.pointer-layer svg {
+    -webkit-transition: opacity 1s linear;
+    -moz-transition: opacity 1s linear;
+    transition: opacity 1s linear;
+    opacity: 0;
+}
+
+div.olLayerDiv.pointer-layer.opacity-visible-animated svg {
+    visibility: visible;
+    opacity: 1;
+}
+
+div.olLayerDiv.pointer-layer.opacity-hidden-animated svg{
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: visibility 0s 1s, opacity 1s linear;
+    -moz-transition: visibility 0s 1s, opacity 1s linear;
+    transition: visibility 0s 1s, opacity 1s linear;
 }
