--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/VideoManager/VideoManager.css
@@ -1,3 +1,8 @@
+#videoManager.initialized {
+    top: auto !important;
+    left: auto !important;
+}
+
 #videoManager div.video-manager-wrapper {
     overflow: hidden;
 }
