#584 top and left coordinates were set

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
@@ -20,6 +20,11 @@ div.olMapViewport div.image-wrapper {
     overflow: hidden;
 }
 
+div.olMapViewport div.image-wrapper.left-top {
+    top: 5px;
+    left: 11px;
+}
+
 div.olMapViewport div.image-wrapper.left-bottom {
     bottom: 5px;
     left: 11px;
