--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -1,15 +1,65 @@
 #timeline {
-    height: 180px !important;
+    height: 185px !important;
 }
 
 div.dojoxFloatingPaneCanvas {
-    height: 160px !important;
+    height: 165px !important;
 }
 
 div.timeline {
     width: 100%;
     height: 100%;
     text-align: center;
+}
+
+div.timeline div.controls-section {
+    width: 240px;
+    float: left;
+    margin-top: 1px;
+}
+
+div.timeline div.video-section {
+    width: 255px;
+    float: right;
+    margin-top: 1px;
+}
+
+div.timeline div.video-section div {
+    display: inline-block;
+}
+
+div.timeline div.video-section a.icon-videocam-2 {
+    font-size: 22px;
+    color: red;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+div.timeline div.video-section a.icon-videocam-2:hover {
+    opacity: 1.0;
+}
+
+div.timeline div.video-section a.icon-videocam-2.disable,
+div.timeline div.video-section a.icon-videocam-2.disable:hover {
+    color: gray;
+    opacity: 0.7;
+    cursor: default;
+}
+
+div.timeline div.video-section div.message {
+    width: 150px;
+}
+
+div.timeline div.video-section a.icon-download-alt {
+    font-size: 20px;
+}
+
+div.timeline div.video-section a.icon.creating{
+    background: url("loading.gif") no-repeat;
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    margin-top: -1px;
 }
 
 div.timeline div.controls {
@@ -64,8 +114,7 @@ div#timeline div.vis-current-time {
 }
 
 div.timeline i.sound,
-div.timeline i.photo,
-div.timeline i.video {
+div.timeline i.photo {
     margin-left: 15px;
 }
 
