#616 VideoOverwriteDialog was applied to VideoSectionMixin

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
@@ -14,7 +14,7 @@
         {{#mode-ready}}
             <div class="icon-wrapper">
                 <a class="icon icon-download-alt"
-                   {{#url}}href="{{url}}"{{/url}} {{^url}}href="javascript:void(0)"{{/url}}
+                   {{#url}}href="{{url}}" download{{/url}} {{^url}}href="javascript:void(0)"{{/url}}
                    title="Скачать"></a>
             </div>
         {{/mode-ready}}
