--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -288,7 +288,8 @@
                      data-dojo-attach-point="bottomPanel"
                      data-dojo-props="region: 'bottom', splitter: true, gutters: false"
                      style="width: 100%; height: 150px; padding: 5px;">
-                    <div data-dojo-attach-point="resourcesTablePane"
+                    <div id="resourcesTablePane"
+                         data-dojo-attach-point="resourcesTablePane"
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'left', splitter: true, gutters: false"
                          style="padding: 0; height: 100%; width:50%; display: inline-block; overflow: hidden;border: 1px #b5bcc7 solid;">
@@ -298,8 +299,8 @@
 
                     <div data-dojo-attach-point="acceptedPartsContentPane"
                          data-dojo-type="dijit/layout/ContentPane"
-                         data-dojo-props="region: 'center', splitter: true, gutters: false"
-                         style="padding: 0; height: 100%; width:49%;overflow: hidden; display: inline-block; position: absolute; right: 4px; border: 1px #b5bcc7 solid;">
+                         data-dojo-props="region: 'center'"
+                         style="padding: 0; height: 100%; overflow: hidden; display: inline-block; position: absolute; right: 4px; border: 1px #b5bcc7 solid;">
 
                         <div data-dojo-attach-point="acceptedPartsPanel"
                              data-dojo-type="ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel"></div>
