#616 supporting mode 'none' was added to VideoSectionMixin

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -60,6 +60,10 @@ div.timeline div.video-section div.message {
     padding: 3px;
 }
 
+div.timeline div.video-section.mode-none div.message {
+    width: 208px;
+}
+
 div.timeline div.video-section a.icon-download-alt {
     font-size: 20px;
     color: #478CF6;
