--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
@@ -1,4 +1,4 @@
-<div class="video-section">
+<div class="video-section {{#modeClass}}{{modeClass}}{{/modeClass}}">
     {{#mode-init}}
     <div class="init-message">Инициализация видео...
     <div>
