#593 hiding photo for first running Timeline was implemented

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/PhotoTimeline/PhotoPointer/ol-controls/PointerControl.css
@@ -15,6 +15,16 @@ div.olControlPhotoPointer {
     background-color: transparent;
 }
 
+div.olMap.photo-pointer-first div.image-wrapper,
+div.olMap.photo-pointer-first div.pointer-layer {
+    opacity: 0 !important;
+}
+
+div.olMap div.image-wrapper,
+div.olMap div.pointer-layer {
+    opacity: 1;
+}
+
 div.olMapViewport div.image-wrapper {
     position: absolute;
     overflow: hidden;
