--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -294,7 +294,7 @@
                          data-dojo-props="region: 'left', splitter: true, gutters: false"
                          style="padding: 0; height: 100%; width:50%; display: inline-block; overflow: hidden;border: 1px #b5bcc7 solid;">
                         <div class="title">Выбранные объекты строительства</div>
-                        <div id="resourcesTable" style="height: auto; position: absolute; display: block; top: 20px; bottom: 0; left: 0; right: 0;"></div>
+                        <div id="resourcesTable" class="selected-resources-table" style="height: auto; position: absolute; display: block; top: 20px; bottom: 0; left: 0; right: 0;"></div>
                     </div>
 
                     <div data-dojo-attach-point="acceptedPartsContentPane"
