#630 scrollbar was hidden on recording_video page

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/recording_video/Display/Display.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/recording_video/Display/Display.css
@@ -4,6 +4,12 @@ body.claro div.main-wrapper div.body-wrapper {
     right: 0;
     left: 0;
     bottom: 0;
+    overflow: hidden;
+}
+
+#mapPane,
+div.olMap {
+    overflow: hidden;
 }
 
 div.olControlZoom,
